# miniSQL

./: CMakeLists.txt  Dockerfile  README.md  db_engine_roadmap.txt  docker-compose.yml  run.bat  run.sh  test_queries.txt
data/: main.catalog  main_choin.tbl  main_debug_db.tbl  main_debug_table.tbl  main_graduation_test.tbl  main_stress_idx.tbl  main_stress_main.tbl  main_stress_test.tbl  main_stress_test_db.tbl  main_test_table.tbl  main_titan_test_db.tbl  main_users.schema  main_users.tbl  main_users_name.tbl  naff_tall.tbl
src/: core.cpp  core.h  executor.cpp  executor.h  main.cpp  minisql.cpp  parser.cpp  parser.h  tempCodeRunnerFile.cpp  test.cpp
src/executor/: executor.cpp  executor.h
src/optimiser/: QueryOptimiser.cpp  QueryOptimiser.h
src/parser/: parser.cpp  parser.h
src/storage/: BPlusTree.h  DataHandling.cpp  DataHandling.h  buffer.cpp  core.cpp  core.h  schema.cpp  schema.h
src/utility/: error.h  filter.h  utils.cpp  utils.h
test/: README.md  run_tests.py
test/queries/: 01_create_table.sql  02_insert_data.sql  03_select.sql  04_where.sql  05_index.sql  06_update.sql  07_delete.sql  08_show.sql
